<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".ui.catalogScreen.CatalogFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/tbLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginEnd="@dimen/space_main">

            <TextView
                style="@style/StyleTitleMedium16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/catalog" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_main">

                <Button
                    style="@style/StyleFilterButton"
                    android:backgroundTint="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/selected_popular"
                    android:drawableLeft="@drawable/sort_by_icon"
                    android:drawableRight="@drawable/down_arrow_icon"/>

                <Button
                    style="@style/StyleFilterButton"
                    android:backgroundTint="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/filters"
                    android:layout_gravity="end"
                    android:drawableLeft="@drawable/filter_icon" />
            </FrameLayout>
        </LinearLayout>
    </com.google.android.material.appbar.MaterialToolbar>

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_main"
        android:scrollbars="none">

        <com.google.android.material.chip.ChipGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:chipSpacingHorizontal="4dp"
            app:singleLine="true"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                style="@style/Widget.MaterialComponents.Chip.Action"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/see_all"
                android:textColor="@color/white"
                app:chipBackgroundColor="@color/darkBlue"
                app:closeIcon="@drawable/small_close_icon"
                app:closeIconSize="8dp"
                app:closeIconEnabled="true"
                app:closeIconTint="@color/white"
                app:closeIconEndPadding="@dimen/space_main_half"/>

            <com.google.android.material.chip.Chip
                style="@style/Widget.MaterialComponents.Chip.Action"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/face"
                android:textColor="@color/grey"
                app:chipBackgroundColor="@color/lightGrey"
                app:closeIcon="@drawable/small_close_icon"
                app:closeIconSize="8dp"
                app:closeIconTint="@color/white"
                app:closeIconEndPadding="@dimen/space_main_half"/>

            <com.google.android.material.chip.Chip
                style="@style/Widget.MaterialComponents.Chip.Action"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/body"
                android:textColor="@color/grey"
                app:chipBackgroundColor="@color/lightGrey"
                app:closeIcon="@drawable/small_close_icon"
                app:closeIconSize="8dp"
                app:closeIconTint="@color/white"
                app:closeIconEndPadding="@dimen/space_main_half"/>

            <com.google.android.material.chip.Chip
                style="@style/Widget.MaterialComponents.Chip.Action"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tan"
                android:textColor="@color/grey"
                app:chipBackgroundColor="@color/lightGrey"
                app:closeIcon="@drawable/small_close_icon"
                app:closeIconSize="8dp"
                app:closeIconTint="@color/white"
                app:closeIconEndPadding="@dimen/space_main_half"/>

            <com.google.android.material.chip.Chip
                style="@style/Widget.MaterialComponents.Chip.Action"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/masks"
                android:textColor="@color/grey"
                app:chipBackgroundColor="@color/lightGrey"
                app:closeIcon="@drawable/small_close_icon"
                app:closeIconSize="8dp"
                app:closeIconTint="@color/white"
                app:closeIconEndPadding="@dimen/space_main_half"/>

        </com.google.android.material.chip.ChipGroup>
    </HorizontalScrollView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvCatalog"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="@dimen/space_main_half"
        android:layout_marginTop="@dimen/space_main_half"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:spanCount="2"
        tools:itemCount="6"
        tools:listitem="@layout/item_product">
    </androidx.recyclerview.widget.RecyclerView>

</LinearLayout>