<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".ui.loginScreen.LoginFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/tbLogin"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <TextView
            style="@style/StyleTitleMedium16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/entry" />
    </com.google.android.material.appbar.MaterialToolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/space_main">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_main"
            android:background="@drawable/shape_background"
            android:orientation="horizontal">

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/first_name"
                android:inputType="textPersonName"
                android:paddingHorizontal="@dimen/space_main"
                android:paddingVertical="@dimen/space_main"
                tools:ignore="Autofill" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="@dimen/space_main"
                android:background="@color/lightGrey"
                android:src="@drawable/big_close_icon"
                tools:ignore="ContentDescription" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_main"
            android:background="@drawable/shape_background"
            android:orientation="horizontal">

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/second_name"
                android:inputType="textPersonName"
                android:paddingHorizontal="@dimen/space_main"
                android:paddingVertical="@dimen/space_main"
                tools:ignore="Autofill" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="@dimen/space_main"
                android:background="@color/lightGrey"
                android:src="@drawable/big_close_icon"
                tools:ignore="ContentDescription" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_main"
            android:background="@drawable/shape_background"
            android:orientation="horizontal">

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/phone_number"
                android:inputType="textPersonName"
                android:paddingHorizontal="@dimen/space_main"
                android:paddingVertical="@dimen/space_main"
                tools:ignore="Autofill" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="@dimen/space_main"
                android:background="@color/lightGrey"
                android:src="@drawable/big_close_icon"
                tools:ignore="ContentDescription" />
        </LinearLayout>
    </LinearLayout>

    <Button
        style="@style/StyleEntryButton"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:layout_marginHorizontal="@dimen/space_main"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/lightPink"
        android:text="@string/enter" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center|bottom"
        android:orientation="vertical">

        <TextView
            style="@style/StyleTitleRegular10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_text"
            android:textColor="@color/grey" />

        <TextView
            style="@style/StyleTitleRegular10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/terms_loyalty_program"
            android:textColor="@color/grey" />
    </LinearLayout>
</LinearLayout>