<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.catalogScreen.CatalogFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/tbLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnBack"
                style="@style/StyleFilterButton"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:backgroundTint="@color/white"
                android:drawableLeft="@drawable/left_arrow_icon"
                android:drawableTint="@color/black"
                android:paddingStart="4dp" />

            <Button
                style="@style/StyleFilterButton"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="end"
                android:layout_marginEnd="@dimen/space_main"
                android:backgroundTint="@color/white"
                android:drawableEnd="@drawable/send_icon"
                android:drawableTint="@color/black" />
        </com.google.android.material.appbar.MaterialToolbar>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="368dp"
            android:layout_marginHorizontal="@dimen/space_main">

            <RelativeLayout
                android:id="@+id/relativeLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.viewpager.widget.ViewPager
                    android:id="@+id/view_pager"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/img_body" />

                <com.tbuonomo.viewpagerdotsindicator.DotsIndicator
                    android:id="@+id/dots_indicator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    app:dotsColor="@color/grey"
                    app:dotsSize="8dp"
                    app:dotsWidthFactor="3"
                    app:selectedDotColor="@color/pink" />
            </RelativeLayout>

            <ImageButton
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginBottom="@dimen/space_main"
                android:background="@drawable/question_icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/relativeLayout"
                tools:ignore="ContentDescription" />

            <ImageButton
                android:id="@+id/btnAddFavorite"
                style="@style/StyleHeartButton"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="6dp"
                android:scaleType="centerInside"
                android:src="@drawable/heart_icon"
                app:layout_constraintEnd_toEndOf="@+id/relativeLayout"
                app:layout_constraintTop_toTopOf="@+id/relativeLayout"
                tools:ignore="ContentDescription"
                tools:src="@drawable/heart_icon" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/space_main"
            android:layout_marginVertical="@dimen/space_main"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvTitle"
                style="@style/StyleTitleMedium16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/grey" />

            <TextView
                android:id="@+id/tvSubTitle"
                style="@style/StyleTitleMedium20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_main_half" />

            <TextView
                android:id="@+id/tvAvailable"
                style="@style/StyleTitleRegular12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_main_half"
                android:textColor="@color/grey" />

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="@dimen/space_main_half"
                app:dividerColor="@color/lightGrey" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <RatingBar
                    android:id="@+id/ratingBar"
                    style="@style/Widget.AppCompat.RatingBar.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:rating="2.7"
                    android:stepSize="0.1"
                    android:theme="@style/RatingBar" />

                <TextView
                    android:id="@+id/tvRating"
                    style="@style/StyleTitleRegular12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/space_main_half"
                    android:textColor="@color/grey" />

                <View
                    android:id="@+id/divider"
                    android:layout_width="2dp"
                    android:layout_height="2dp"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="4dp"
                    android:background="@color/grey" />

                <TextView
                    android:id="@+id/tvFeedbackCount"
                    style="@style/StyleTitleRegular12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="@color/grey" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_main_half"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvPriceWithDiscount"
                    style="@style/StyleTitleMedium24"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/tvPrice"
                    style="@style/StyleTitleRegular12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="@dimen/space_main_half"
                    android:textColor="@color/grey" />

                <TextView
                    android:id="@+id/tvDiscount"
                    style="@style/StyleTitleRegular9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/shape_pink_background"
                    android:gravity="center"
                    android:paddingHorizontal="@dimen/space_main_half"
                    android:paddingVertical="4dp"
                    android:textColor="@color/white" />
            </LinearLayout>

            <TextView
                style="@style/StyleTitleMedium16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_main"
                android:text="@string/description" />

            <Button
                android:id="@+id/btnNoPressTitle"
                style="@style/StyleEntryButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/lightGrey"
                android:drawableEnd="@drawable/right_arrow_icon"
                android:drawableTint="@color/black"
                android:paddingStart="@dimen/space_main_half"
                android:paddingEnd="@dimen/space_main"
                android:textAlignment="textStart"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tvDescription"
                style="@style/StyleTitleRegular12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_main" />

            <Button
                android:id="@+id/btnHide"
                style="@style/StyleEntryButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:textAlignment="textStart"
                android:text="@string/hide"
                android:textColor="@color/grey" />

            <TextView
                style="@style/StyleTitleMedium16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_main"
                android:text="@string/specifications" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvProductDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/space_main"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_product_detail" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_main"
                android:orientation="horizontal">

                <TextView
                    style="@style/StyleTitleMedium16"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/detail" />

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/copy_icon"
                    tools:ignore="ContentDescription" />
            </LinearLayout>

            <TextView
                android:id="@+id/tvIngredients"
                style="@style/StyleTitleRegular12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_main" />

            <Button
                android:id="@+id/btnMore"
                style="@style/StyleEntryButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:textAlignment="textStart"
                android:text="@string/more"
                android:textColor="@color/grey" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="@dimen/space_main"
                android:background="@drawable/shape_background"
                android:backgroundTint="@color/pink"
                android:clickable="true"
                android:orientation="horizontal"
                android:paddingHorizontal="@dimen/space_main">

                <TextView
                    android:id="@+id/tvPriceOnButton"
                    style="@style/StyleTitleMedium14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/tvPriceWithDiscountOnButton"
                    style="@style/StyleTitleRegular10"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="@dimen/space_main_half"
                    android:layout_weight="1"
                    android:textColor="@color/lightPink" />

                <TextView
                    style="@style/StyleTitleMedium14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/add_in_recycle"
                    android:textColor="@color/white" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>